--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-toast": "^1.1.5",
+    "cookie-parser": "^1.4.6",
     "darkmode-js": "^1.5.7",
     "dayjs": "^1.11.10",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.2.2",
