--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "bcrypt": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "typescript": "^5"
