--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.3",
+    "prisma": "^5.8.1",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
